add game engines and readme.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /nbproject/private/
 /build/
-/dist/
+/GomokuAlgorithm1/nbproject/private/
+/GomokuAlgorithm1/build/
+/GomokuAlgorithm2/nbproject/private/
+/GomokuAlgorithm2/build/
+/GomokuAlgorithmGenetic/nbproject/private/
+/GomokuAlgorithmGenetic/build/
+/GomokuContest/nbproject/private/
+/GomokuContest/build/
+/GomokuContest/dist/
